[package]
name = "maomi"
version = "0.1.0"
authors = ["LastLeaf <bqfu@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
me-cell = { path = "./me-cell" }
lazy-observer = { path = "./lazy-observer" }
maomi-macro = { path = "./macro" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
log = "0.4"
console_log = "0.1"
downcast-rs = "1.1"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "NodeList",
  "Element",
  "Text",
  "Comment",
  "DocumentFragment",
  "EventListener",
  "EventTarget",
  "Event",
  "MouseEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "KeyboardEvent"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
