[workspace]
members = [
    "maomi",
    "maomi-macro",
    "maomi-tree",
    "maomi-skin",
    "maomi-dom",
    "maomi-dom-macro",
    "maomi-dom-template",
    "maomi-tools",
    "dom-bench/keyed",
    "dom-bench/keyed-comp",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
