[workspace]
members = [
    "maomi",
    "maomi-macro",
    "maomi-tree",
    "maomi-skin",
    "maomi-dom",
    "maomi-dom-macro",
    "maomi-dom-template",
    "maomi-tools",
    "dom-bench/keyed",
    "dom-bench/keyed-comp",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[patch.crates-io]
"maomi" = { path = "./maomi" }
"maomi-dom" = { path = "./maomi-dom" }
"maomi-dom-macro" = { path = "./maomi-dom-macro" }
"maomi-macro" = { path = "./maomi-macro" }
"maomi-skin" = { path = "./maomi-skin" }
"maomi-tools" = { path = "./maomi-tools" }
"maomi-tree" = { path = "./maomi-tree" }
