[package]
name = "lazy-observer"
version = "0.3.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "Observe data change lazily, for building data stores and data observers (a helper crate for maomi)"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2018"

[dependencies]
