[package]
name = "maomi-dom-macro"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "A rust wasm framework for building pages with components"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
maomi-tools = { version = "=0.4.0", path = "../maomi-tools" }
maomi-skin = { version = "=0.4.0", path = "../maomi-skin" }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
once_cell = "1.13"

[dev-dependencies]
serial_test = "0.9"
