[package]
name = "maomi-dom-macro"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "Strict and Performant Web Application Programming"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
maomi-tools = "=0.4.0"
maomi-skin = "=0.4.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
once_cell = "1.13"

[dev-dependencies]
serial_test = "0.9"
