[package]
name = "maomi-dom-template"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "A rust wasm framework for building pages with components"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
maomi = { version = "=0.4.0", path = "../maomi" }
maomi-dom = { version = "=0.4.0", path = "../maomi-dom" }
log = "0.4"
env_logger = "0.9"
console_log = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.maomi]
css-out-dir = "pkg" # the location of CSS output (can be overrided by `MAOMI_CSS_OUT_DIR` environment variable)
css-out-mode = "debug" # the location of CSS output (can be overrided by `MAOMI_CSS_OUT_MODE` environment variable)
stylesheet-mod-root = "src/lib.mcss"
i18n-dir = "i18n"
