[package]
name = "maomi-dom"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "A rust wasm framework for building pages with components"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[dependencies]
maomi = { version = "=0.4.0", path = "../maomi" }
maomi-dom-macro = { version = "=0.4.0", path = "../maomi-dom-macro" }
log = "0.4"
js-sys = "0.3"
enum_dispatch = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "NodeList",
  "DocumentFragment",
  "Element",
  "Text",
  "DomTokenList",
  "CssStyleDeclaration",
  "EventListener",
  "EventTarget",
  "Event",
  "EventInit",
  "MouseEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "KeyboardEvent",
  "AnimationEvent",
  "TransitionEvent",
]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen-test = "0.3"
console_log = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
