[package]
name = "maomi-skin"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "Strict and Performant Web Application Programming"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[dependencies]
maomi-tools = "=0.4.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
rustc-hash = "1.1"
once_cell = "1.13"
