[package]
name = "maomi-tools"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "Strict and Performant Web Application Programming"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[[bin]]
name = "maomi-i18n-format"
path = "src/i18n_format.rs"

[dependencies]
log = "0.4"
once_cell = "1.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
rustc-hash = "1.1"
clap = { version = "4.1", features = ["derive"] }
