[package]
name = "maomi"
version = "0.4.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "Strict and Performant Web Application Programming"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2021"

[features]
default = []
prerendering = []
prerendering-apply = []
all = ["prerendering", "prerendering-apply"]

[dependencies]
maomi-macro = "=0.4.0"
maomi-tree = "=0.4.0"
log = "0.4"
async-trait = "0.1"
