[package]
name = "me-cell"
version = "0.1.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "Multi-entrance cell, for building tree structures (a helper crate for maomi)"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2018"

[dependencies]
