[package]
name = "maomi-example-hello-world"
version = "0.3.0"
authors = ["LastLeaf <bqfu@163.com>"]
license = "MIT"
description = "A rust wasm framework for building pages with components (an example)"
homepage = "https://github.com/LastLeaf/maomi"
documentation = "https://github.com/LastLeaf/maomi"
repository = "https://github.com/LastLeaf/maomi"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
maomi = { version = "=0.3.0", path = "../../maomi" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "0.1"
